# FFT-ocean-baker

./: CMakeLists.txt  README.md
src/: main.cpp
src/ocean/: simulator.cpp  simulator.hpp
src/utils/: image_writer.cpp  image_writer.hpp
